--- a/kubernetes-intro/web-pod.yaml
+++ b/kubernetes-intro/web-pod.yaml
@@ -1,10 +1,29 @@
-apiVersion: v1
-kind: Pod
+apiVersion: v1 
+kind: Pod 
 metadata:
   name: web
   labels:
-    key: app
+    app: web
 spec:
   containers:
   - name: web
-    image: darkzorro/otusdz1:v2
+    image: darkzorro/otusdz1:v3
+    readinessProbe:
+      httpGet:
+        path: /index.html
+        port: 8000
+    livenessProbe:
+      tcpSocket: { port: 8000 }
+    volumeMounts:
+    - name: app
+      mountPath: /app
+  initContainers:
+  - name: init-web
+    image: busybox:1.31.1
+    command: ['sh', '-c', 'wget -O- https://tinyurl.com/otus-k8s-intro | sh']
+    volumeMounts:
+    - name: app
+      mountPath: /app
+  volumes:
+  - name: app
+    emptyDir: {}
